[flake8]
max-line-length = 79
ignore =  E203, E402, W503, W504, E501
per-file-ignores =
    imp_env/pomdp_models/create_models.py: E741, E231
    pymarl/utils/timehelper.py: W605


[metadata]
name = imp_marl
version = attr: imp_marl.__version__
description = Environments for Infrastructure Management Planning
long_description = file: README.md
long_description_content_type = text/markdown
keywords = reinforcement learning, multi-agent, RL
authors = [
    { name="Pascal Leroy", email="pjr.leroy@gmail.com" },
    { name="Pablo G. Morato", email="p.g.moratodominguez@tudelft.nl" }]
url = https://github.com/moratodpg/imp_marl
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires = numpy>=1.21.6
